# ChangeLog for media-sound/mpg123
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/mpg123/ChangeLog,v 1.317 2015/01/30 02:55:49 patrick Exp $

  30 Jan 2015; Patrick Lauer <patrick@gentoo.org> metadata.xml:
  Remove unneeded useflag description from metadata.xml

  29 Jan 2015; Michał Górny <mgorny@gentoo.org> mpg123-1.18.1.ebuild,
  mpg123-1.19.0.ebuild, mpg123-1.20.0.ebuild, mpg123-1.20.1.ebuild,
  mpg123-1.21.0.ebuild:
  Convert to CPU_FLAGS_X86.

  14 Dec 2014; Mikle Kolyada <zlogene@gentoo.org> -mpg123-1.15.4.ebuild:
  Security cleanup

*mpg123-1.21.0 (11 Oct 2014)

  11 Oct 2014; Tim Harder <radhermit@gentoo.org> +mpg123-1.21.0.ebuild:
  Version bump.

*mpg123-1.20.1 (22 Jun 2014)

  22 Jun 2014; Tim Harder <radhermit@gentoo.org> +mpg123-1.20.1.ebuild:
  Version bump.

  08 Jun 2014; Agostino Sarubbo <ago@gentoo.org> mpg123-1.18.1.ebuild:
  Stable for sparc, wrt bug #500262

  08 Jun 2014; Agostino Sarubbo <ago@gentoo.org> mpg123-1.18.1.ebuild:
  Stable for ppc, wrt bug #500262

  08 Jun 2014; Agostino Sarubbo <ago@gentoo.org> mpg123-1.18.1.ebuild:
  Stable for ppc64, wrt bug #500262

  08 Jun 2014; Agostino Sarubbo <ago@gentoo.org> mpg123-1.18.1.ebuild:
  Stable for ia64, wrt bug #500262

*mpg123-1.20.0 (27 May 2014)

  27 May 2014; Samuli Suominen <ssuominen@gentoo.org> +mpg123-1.20.0.ebuild:
  Version bump; notice how upstream introduced new out123 executable, see NEWS
  file for more information.

  25 May 2014; Markus Meier <maekke@gentoo.org> mpg123-1.18.1.ebuild:
  arm stable, bug #500262

  17 May 2014; Agostino Sarubbo <ago@gentoo.org> mpg123-1.18.1.ebuild:
  Stable for alpha, wrt bug #500262

  17 May 2014; Agostino Sarubbo <ago@gentoo.org> mpg123-1.18.1.ebuild:
  Stable for x86, wrt bug #500262

  17 May 2014; Agostino Sarubbo <ago@gentoo.org> mpg123-1.18.1.ebuild:
  Stable for amd64, wrt bug #500262

  12 May 2014; Jeroen Roovers <jer@gentoo.org> mpg123-1.18.1.ebuild: