@@ -1,12 +1,28 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 DIST mpg123-1.18.1.tar.bz2 853423 SHA256 bc6d384f7e038f2458cb05a4d175325e5cb25e0aed441d7b02960e8ec186652d SHA512 973af5e9de67c489dd609d18234ba4118a635d63bb6f1b919f9b89f57adc4bddca9a5bf41a47f1da588f14c84ed130d8ac8e674a081f06d35f5ace85924a70b5 WHIRLPOOL 4959edd4002f021092fffb4c84d864c612b2692b8d9bfa5dd3c16ae7bcdbcf179c20f3af6609260646cb71305fe9831c7f080678783aed1af187251a1d13970c
 DIST mpg123-1.19.0.tar.bz2 855879 SHA256 869024e01d7cb4dae1aea2f2a10420d4be7e1ac02a9c434d06d727599169b01b SHA512 ac176321265c3c6270fbceaab045784ffeb1185e5bf599fb8f269ff6f02a05a7c70988c44ff7bedeb665c45ab9ed0a5e408180fabf3e3e3121972acec0e65351 WHIRLPOOL 05b3cbdc813f4c88e2a343518f41b813ab40a76dff82358527f66a1130ceec7fb61a37f77586fd008ef0801be53da8ac65cdd25c4ca7f89de845a1bcb3ce36c3
 DIST mpg123-1.20.0.tar.bz2 863544 SHA256 a97c85f212fade0728d2d641190907935d4b03028ba200d1576f4f6786578503 SHA512 1ebb01ce8f8745a36c4b32ce4f4ec9036af36f18de08633425cb38038cc2bee5fbe3afbeb2deaa7251d0b0f28d2c5ceb41f82625417ec037a0e529facdd1ac17 WHIRLPOOL b3124d6791da7e017d40565a2b51b1a84bc5cfb896801736f86f65a79ffb1786b409b13834d665a9f520fe8565851ff343101f705e4608922cb9bf7f91e25358
 DIST mpg123-1.20.1.tar.bz2 863792 SHA256 da2941c1905b5776d5468209896502a8d5257966dfadc07f1e4ea105cc515900 SHA512 88e11c5aa84181c457d4b7df7f54d79705552f69ee76197964442d4d817c9dc1e092005feb4ccc59d7ceef428052688c9abf95e49e443afb93ca4645b5b30dd7 WHIRLPOOL b2942a5d816dea735782ba31e334a52ff2a848dcf7f5ac995185f5c4b2e254015d2bde8532c8e14fcf937f82704347db6a045bbb75f2e641c2e8c1b7da09529f
 DIST mpg123-1.21.0.tar.bz2 863177 SHA256 3ad197f77c9ffdf3601e1c3183ae0709ccb3c3de68309527ce9375fcfb15dcba SHA512 8c48037981d3ff8a2e863a781b2d22226a820d63d334c11dcc2868d715ef696ece7a302d1df0550a5fe936ad19ef87bdddf3c8cc8a7339998f229671dc5cc48c WHIRLPOOL 19e4d335f67e181e57acb716337b501aed1c5815dc63a8a69995bee06d6fd0bff8a5e4c86aec09459d5213b8d8bcc27fa99653795a72affad74cea7679eaa5af
+DIST mpg123-1.22.0.tar.bz2 854090 SHA256 25244c07dcb1df0a94092d94126c4172918739fe0e78faaaf97cf0b0fcc1a800 SHA512 b9ac9b95e2627949b32a4c3175e2ad1dda43986222750903e565696e03ef751ee545707ad081a5c06160d199ccae841c90d228082df4d9db841987e973ac5eda WHIRLPOOL fe9a599a5d8433564bc3615a453c5f7205f175438bb296c67efbeeed8d101733e7d302bd327dc90aa3a2d34553b63623955f106422dad36f2f80446942d6ea9d
 EBUILD mpg123-1.18.1.ebuild 2982 SHA256 1ea294cf82a525a59133b080ebc0ead1ce17a7b2fc33636b370eca34bc924927 SHA512 44a65843cb27f11bc2348cf43a484fefc6a80b238a36ef8ab19d6c816ecbeeca27c09fef7cc60bd3079f15477e9de20549931f3205af16e720122223f2a2b8af WHIRLPOOL ceb5c2c76e1f30f4061d36068b53354da964fce0eafd0f7e32e656ec713cc239200aa894e15d205efdaa3b710225ca59923b628704947565d6035314616e3045
 EBUILD mpg123-1.19.0.ebuild 2990 SHA256 54c13b9a8b06696720247ebf90f705d6d7d6f8202c2945adb5bbd5a506545051 SHA512 1fa9cdc705734c15a90b439c39fd771fe7ca39c9db4225baf5af12c4c278de40dcb1c9da66374da4d7fbd8d5bbec9006c1b10b283121cf8ff6ecbef8eac8a595 WHIRLPOOL 71ed1442826b64d16c61165aead25e3596d3ee5b64de654895d3e96354c147cb68868e833e3f6fc89fd28f48f479e67b585035da750c757402e6474338261401
 EBUILD mpg123-1.20.0.ebuild 2990 SHA256 f9b38199aee3a703379c0f2945dea44fd33e0c20901b7721ba40a0dd7d785f4d SHA512 6257bc63765c22d5ead1ec11a30fbe79f390ad483b5fa6e66df44cf35ab8cc9a20579e99a33afe63090bdb27ddde3415ab942dbd5f7b25dd4c3583831d9677ea WHIRLPOOL 8fe2fe4f3f87f3600a0e9119f1bb79e4a4750fd2b220b332eb5576b79505f6f091cb2e549befc4ab16e8c015f3c7b130f5fc9368048401178f65a1ff8e6ec024
 EBUILD mpg123-1.20.1.ebuild 2990 SHA256 62aa0001c6054b4c8576d219b96265e4277c64b0434528e7237505a9aa18ff49 SHA512 585aa0e2f630b552143e64340aaa0aa55e1b43b3602471985ec3f716673e07717f5fbc00ad169b56e5162e69c00457251adbd37eb602c2514b5d9da1ab3986a8 WHIRLPOOL dda7c1e536508fe6875a6ad3e58aaa76cd6ac992d46d4a37052e4157380be458c8d451db065a7f60865e39f31d20357e99750a258dd28489312ecf9d331ad078
 EBUILD mpg123-1.21.0.ebuild 2990 SHA256 cb6015430d8f9a4f7b30c037ad438a0f3cabaf89eae58b9cfd6cdc2dbf6676b2 SHA512 ea9d796f3e096b76b18342336b1e60c2a91bfa327ca653325e810ef1403e9cf85654df6cac80d39b7353098c7078288c773b13e346651be19b6abe5701f5ec91 WHIRLPOOL 187c9ce9db9728a65f60a92001828d31bfd9d82202e6cfce2b8f4429be6b71363b27a809586a72cdf4dda4c9f1c04cd7d29fdc79eb6b25a12d82930701cbbe04
-MISC ChangeLog 42558 SHA256 ba0106e85c66720e660e8dd287f758fdb678d981cee13e21eabde4051ad1742e SHA512 b973443c0278348ee8a3a82ac28f501c4dc19d9629d719a41f7ca81a70ad2b335155d644283067c4a09e8200ea1233851af44511a9662ebcd149518dcfe1a48e WHIRLPOOL 94369a816e97bd4d9ca0da0b1d0b1911fe07e666e0af77f05177781c7400409b75843e4f4053c73136b1390e43945ea46508572a2c0b112074079d2a8bdc8726
+EBUILD mpg123-1.22.0.ebuild 3041 SHA256 29f84e804c4ef2ad29a0a63037084b84b61f7b448d194e17a96ffe528501bdbe SHA512 3c8ffd302929ef75787bc826764efacf18c50ddccd534e3eeda08372bd5afe2d5c5e07e40332625ed0c47c9d4aa0c5c9f593cd0972d86f0cf438cd9831580542 WHIRLPOOL 0853624bd5c9f00156be6d1f6b71a588b7bce78c7d0367d3e5fbcf1359e18e1ba7c6fabb09fc2c6ecb03131d5217da15718729a636e86ced8db5110cee77f7e1
+MISC ChangeLog 42679 SHA256 4b6cf9b8fdac45d225630e0b81a37e600caf911133824eeab68c274ebc592a60 SHA512 eee5505e036c13ae3f37d5abb3dd9aacbdd2c571297340f785b26699351787e2312e45f7996e6fedddc658cc4be720bef9cf13301d0603f99816e87eaeec994e WHIRLPOOL d99c896584b0c364e886dd77ac79ec34c72db07ce27375e3386ae9d1ed66691f3746c2ddf536eaba3fa2e10c8c3b247457be46371f4f7f77976d4c0c6492bc06
 MISC metadata.xml 426 SHA256 9813f8eb0ed7ea470c2bdbbed633a1e709ddca81b0eb1f9cee8fff268db52dd4 SHA512 163a9ac2057f59fe21b725fc5f2a8e807b8b80856713bdcc65a5dae7ee18eb8dfdc595851dc08eb5d51f5ac8f25ffe4fa8d28b19deed2f5c95d64db625a42677 WHIRLPOOL 5242bed79d79368adc6ee746da51bc36542268cc47a3cad3923f33ed23746d4db0afe09d9c03698587b1da051b2f1fb76b66b9305fb27e103fdef6105bcd449e
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJU7pSyAAoJEEqz6FtPBkyjEIIIALG67hOz7Yq9lUs1FYkIziao
+NAGQ5+9F2FJanBzgXxIb4avHNGD5btlaEyB1uPbcixsrJPIgmz3H+bml0r/WTDgq
+lIbma5kG13r7vy/aYQWWytDopjk9bUcq4M+AF/BWqsvMmb455QyfRkAqHpmB3XII
+7uywNYOUnJ/WEYPfs/IrVousgXup2UdvZZ0tYmFlSoy4U82gnIPlqUgtC47lMejL
+RhC7Yqgez5D+N5lpqXc354IBbXFaP2ZUNtvJi0YpA3Q/CkOTs/porc0lWtwl573X
+rbqwRQg7A5pNWe+DZsGrAoemRdV6C/gKjexcQo9Bpu6VA7ifIL2NdX/ZMSd1lSI=
+=IMht
+-----END PGP SIGNATURE-----
